Adicionei alguns elementos.
Adicionei duas seções e algumas divs.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,45 @@
 </head>
 <body>
     <header>
+        <div id="titulo">
+            <h1>Marcos vinicius</h1>
+            <p>Estudante de Ciência da Computação</p>
+        </div>
 
+        <div id="menu">
+            <img src="icons/menu-aberto.png" alt="">
+        </div>
     </header>
     <main>
+        <div>
+            <img src="icons/brasil.png" alt="">
+            <button disabled="disabled"></button>
+        </div>
 
+        <section id="sobremim">
+            <div id="foto"></div>
+            <div id="sobreeu">
+                <h1>Sobre mim</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio explicabo enim molestiae odio tempore temporibus, laboriosam molestias iusto, consectetur corporis rerum accusamus sed voluptatibus earum quis. Corrupti, saepe iste!</p>
+            </div>
+            <div id="sobrehistória">
+                <h1>Minha história</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet, optio quasi eos temporibus saepe sapiente recusandae at facilis ducimus voluptas unde tempore quidem distinctio eligendi aliquam excepturi a voluptatibus?</p>
+            </div>
+        </section>
+
+        <section id="meusprojetos">
+            
+            <h1>Meus Projetos</h1>
+            <div class="projetos"></div>    
+            <div class="projetos"></div>  
+            <div class="projetos"></div>  
+
+            <p>Veja mais <a href="#"> aqui</a></p>
+        </section>                                                                  
     </main>
     <footer>
-
+        <h2>Novembro, 2024</h2>
     </footer>
 
     <script src="logic.js"></script>
