--- a/index.html
+++ b/index.html
@@ -13,18 +13,30 @@
             <p>Estudante de Ciência da Computação</p>
         </div>
 
-        <div id="menu">
-            <img src="icons/menu-aberto.png" alt="">
+        <div id="menumobile">
+            <ul id="listlinkm">
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Meus projetos</a></li>
+                <li><a href="#">Redes sociais</a></li>
+            </ul>
         </div>
+
+        <div id="menudesktop">
+            <ul id="listlinkd">
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Sobre Mim</a></li>
+            </ul>
+        </div>
+        
     </header>
     <main>
-        <div>
-            <img src="icons/brasil.png" alt="">
+        <div id="button">
             <button disabled="disabled"></button>
         </div>
 
         <section id="sobremim">
-            <div id="foto"></div>
+            <div id="foto">.</div>
             <div id="sobreeu">
                 <h1>Sobre mim</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio explicabo enim molestiae odio tempore temporibus, laboriosam molestias iusto, consectetur corporis rerum accusamus sed voluptatibus earum quis. Corrupti, saepe iste!</p>
@@ -36,14 +48,13 @@
         </section>
 
         <section id="meusprojetos">
-            
             <h1>Meus Projetos</h1>
             <div class="projetos"></div>    
             <div class="projetos"></div>  
             <div class="projetos"></div>  
+            <p>Veja mais <a href="#">aqui</a></p>
+        </section>   
 
-            <p>Veja mais <a href="#"> aqui</a></p>
-        </section>                                                                  
     </main>
     <footer>
         <h2>Novembro, 2024</h2>
