--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
 </head>
 <body>
     <header>
-        <div id="titulo">
+        <div id="title">
             <h1>Marcos vinicius</h1>
-            <p>Estudante de Ciência da Computação</p>
+            <p>Cientista da Computação</p>
         </div>
 
-        <div id="menumobile">
-            <ul id="listlinkm">
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Meus projetos</a></li>
-                <li><a href="#">Redes sociais</a></li>
-            </ul>
+        <div id="menuimgmobile">
+            <img src="icons/icon-hamburger.svg" alt="menumobile">
         </div>
 
         <div id="menudesktop">
@@ -28,34 +24,61 @@
                 <li><a href="#">Sobre Mim</a></li>
             </ul>
         </div>
-        
     </header>
+
+    <div id="menumobile">
+        <ul id="listlinkm">
+            <li><a href="#">Sobre Mim</a></li>
+            <li><a href="#">Meus projetos</a></li>
+            <li><a href="#">Redes sociais</a></li>
+        </ul>
+    </div>
+
+
     <main>
         <div id="button">
             <button disabled="disabled"></button>
         </div>
 
-        <section id="sobremim">
-            <div id="foto">.</div>
-            <div id="sobreeu">
+        <section class="sections" id="aboutme">
+            <div id="photo">.</div>
+            <div class="divsection" id="aboutme">
                 <h1>Sobre mim</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio explicabo enim molestiae odio tempore temporibus, laboriosam molestias iusto, consectetur corporis rerum accusamus sed voluptatibus earum quis. Corrupti, saepe iste!</p>
             </div>
-            <div id="sobrehistória">
+            <div class="divsection" id="aboutstory">
                 <h1>Minha história</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet, optio quasi eos temporibus saepe sapiente recusandae at facilis ducimus voluptas unde tempore quidem distinctio eligendi aliquam excepturi a voluptatibus?</p>
             </div>
         </section>
 
-        <section id="meusprojetos">
+        <section class="sections" id="myprojects">
             <h1>Meus Projetos</h1>
-            <div class="projetos"></div>    
-            <div class="projetos"></div>  
-            <div class="projetos"></div>  
+            <div class="projects">
+                <div class="imgprojects">
+                    
+                </div>
+                <div class="projectsdescription">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                </div>
+            </div>    
+            <div class="projects">
+                <div class="imgprojects"></div>
+                <div class="projectsdescription">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                </div>
+            </div>  
+            <div class="projects">
+                <div class="imgprojects"></div>
+                <div class="projectsdescription">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                </div>
+            </div>  
             <p>Veja mais <a href="#">aqui</a></p>
         </section>   
 
     </main>
+
     <footer>
         <h2>Novembro, 2024</h2>
     </footer>
