--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div id="menuimgmobile">
-            <img src="icons/icon-hamburger.svg" alt="menumobile">
+            <img src="icons/icon-hamburger.svg" alt="menumobile" onclick="start()">
         </div>
 
         <div id="menudesktop">
