--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marcos Vinicius - Portifólio</title>
+    <title>Marcos Colares - Portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div id="title">
-            <h1>Marcos vinicius</h1>
+            <h1>Marcos Colares</h1>
             <p>Cientista da Computação</p>
         </div>
 
@@ -40,15 +40,16 @@
             <button disabled="disabled"></button>
         </div>
 
-        <section class="sections" id="aboutme">
+        <section class="sections" id="sectionme">
             <div id="photo">.</div>
             <div class="divsection" id="aboutme">
                 <h1>Sobre mim</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio explicabo enim molestiae odio tempore temporibus, laboriosam molestias iusto, consectetur corporis rerum accusamus sed voluptatibus earum quis. Corrupti, saepe iste!</p>
+                <p>Graduando em Ciência da Computação pelo IFMA(Instituto Federal do Maranhão), atualmente no terceiro período. As Linguagens que uso e áreas que estudo relacionados a programação são <a href="">JavaScript</a>, <a href="">POO</a>, <a href="">Estrutura de Dados</a> e <a href="">Desenvolvimento Web</a>.</p>
             </div>
             <div class="divsection" id="aboutstory">
                 <h1>Minha história</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet, optio quasi eos temporibus saepe sapiente recusandae at facilis ducimus voluptas unde tempore quidem distinctio eligendi aliquam excepturi a voluptatibus?</p>
+                <p>Comecei a estudar sobre programação e a área de TI no final de 2021, em 2022 botei um pouco mais de gás e fiz algumas coisas em html e css mas não me aprofundei muito assim como em 2023 muito por conta do enem já que estava no Ensino médio. Em 2024 entrei para o curso de Ciência da Computação e foi apartir disso que comecei a me aprofundar realmente na área, estudando algoritmos, Lógica de progrmação e criei muitos projetos frontend para praticar. </p>
+                <p>Nas minhas horas vagas, eu gosto de jogar alguns jogos como Skyrim, ler livros como O Senhor dos Anéis, Silmarillion, Hobbit, gosto passear com meu cachorro e assistir filmes de fantasia como toda a trilogia de O Hobbit e Senhor dos Anéis. Gosto bastante de LOTR!</p>
             </div>
         </section>
 
@@ -59,19 +60,19 @@
                     
                 </div>
                 <div class="projectsdescription">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                    <p>Lorem ipsum d</p>
                 </div>
             </div>    
             <div class="projects">
                 <div class="imgprojects"></div>
                 <div class="projectsdescription">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                    <p>Lorem ipsum d</p>
                 </div>
             </div>  
             <div class="projects">
                 <div class="imgprojects"></div>
                 <div class="projectsdescription">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit accusamus cupiditate! Unde nesciunt labore vitae, optio eligendi mollitia eos molestiae ipsam perspiciatis ipsum tenetur accusamus fugiat quo, ab sunt.
+                    <p>Lorem ipsum d</p>
                 </div>
             </div>  
             <p>Veja mais <a href="#">aqui</a></p>
