Mudei muita coisa.
Mudei algumas coisas.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div id="menuimgmobile">
-            <img src="icons/icon-hamburger.svg" alt="menumobile" onclick="start()">
+            <img src="icons/icon-hamburger.svg" alt="menumobile" onclick="startmenu()">
         </div>
 
         <div id="menudesktop">
@@ -55,24 +55,26 @@
 
         <section class="sections" id="myprojects">
             <h1>Meus Projetos</h1>
-            <div class="projects">
+            <div class="projects"  onclick="startdescrição(this)">
                 <div class="imgprojects">
-                    
                 </div>
                 <div class="projectsdescription">
-                    <p>Lorem ipsum d</p>
+                    <p>Lorem ipsum d</p> <br>
+                    <span id="descriçãoprojetos">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
             </div>    
-            <div class="projects">
+            <div class="projects"  onclick="startdescrição(this)">
                 <div class="imgprojects"></div>
                 <div class="projectsdescription">
                     <p>Lorem ipsum d</p>
+                    <span class="descriçãoprojetos">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
             </div>  
-            <div class="projects">
+            <div class="projects"  onclick="startdescrição(this)">
                 <div class="imgprojects"></div>
                 <div class="projectsdescription">
                     <p>Lorem ipsum d</p>
+                    <span class="descriçãoprojetos">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
             </div>  
             <p>Veja mais <a href="#">aqui</a></p>
