Improving the javaScript code.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
         </div>
 
         <div id="menuimgmobile">
-            <img src="icons/icon-hamburger.svg" alt="menumobile" onclick="startmenu(this)">
+            <img src="icons/icon-hamburger.svg" alt="menumobile">
         </div>
 
         <div id="menudesktop">
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <div id="menumobile">
+    <div id="menumobile" class="hidden">
         <ul id="listlinkm">
             <li><a href="#">Sobre Mim</a></li>
             <li><a href="#">Meus projetos</a></li>
@@ -59,8 +59,8 @@
                 <div class="imgprojects">
                 </div>
                 <div class="projectsdescription">
-                    <p>Lorem ipsum d</p> <br>
-                    <span id="description1" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
+                    <p>Lorem ipsum d</p>
+                    <span id="description1" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates. <a href="#">Clique aqui para acessar</a></span>
                 </div>
             </div>    
             <div class="projects" >
