--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="menudesktop">
             <ul id="listlinkd">
                 <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Copiar Email</a></li>
+                <li><a href="#">Baixar Curriculo</a></li>
             </ul>
         </div>
     </header>
