--- a/index.html
+++ b/index.html
@@ -13,26 +13,29 @@
             <p>Cientista da Computação</p>
         </div>
 
-        <div id="menuimgmobile">
-            <img src="icons/icon-hamburger.svg" alt="menumobile">
+        <div id="menu-img-mobile">
+            <img src="./assets/icons/icon-hamburger.svg" alt="menumobile">
         </div>
 
-        <div id="menudesktop">
-            <ul id="listlinkd">
+        <div id="menu-desktop">
+            <ul id="list-linkd">
                 <li><a href="#">Sobre Mim</a></li>
                 <li><a href="#">Copiar Email</a></li>
                 <li><a href="#">Baixar Curriculo</a></li>
             </ul>
         </div>
+
+        <div id="menu-mobile" class="hidden">
+            <ul id="list-linkm">
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Meus projetos</a></li>
+                <li><a href="#">Redes sociais</a></li>
+            </ul>
+            <div id="back-arrow"></div>
+        </div>
     </header>
 
-    <div id="menumobile" class="hidden">
-        <ul id="listlinkm">
-            <li><a href="#">Sobre Mim</a></li>
-            <li><a href="#">Meus projetos</a></li>
-            <li><a href="#">Redes sociais</a></li>
-        </ul>
-    </div>
+   
 
 
     <main>
