Creating a toggle switch.

--- a/index.html
+++ b/index.html
@@ -35,47 +35,49 @@
         </div>
     </header>
 
-   
-
-
     <main>
-        <div id="button">
-            <button disabled="disabled"></button>
+        <div id="div-button">
+            <div id="brazil-flag"></div>
+            <label id="div-checkbox">
+                <input type="checkbox" id="">
+                <span id="slider"></span>
+            </label>
+            <div id="usa-flag"></div>
         </div>
 
-        <section class="sections" id="sectionme">
+        <section class="sections" id="section-me">
             <div id="photo">.</div>
-            <div class="divsection" id="aboutme">
+            <div class="div-section" id="about-me">
                 <h1>Sobre mim</h1>
                 <p>Graduando em Ciência da Computação pelo IFMA(Instituto Federal do Maranhão), atualmente no terceiro período. As Linguagens que uso e áreas que estudo relacionados a programação são <a href="">JavaScript</a>, <a href="">POO</a>, <a href="">Estrutura de Dados</a> e <a href="">Desenvolvimento Web</a>.</p>
             </div>
-            <div class="divsection" id="aboutstory">
+            <div class="div-section" id="about-story">
                 <h1>Minha história</h1>
                 <p>Comecei a estudar sobre programação e a área de TI no final de 2021, em 2022 botei um pouco mais de gás e fiz algumas coisas em html e css mas não me aprofundei muito assim como em 2023 muito por conta do enem já que estava no Ensino médio. Em 2024 entrei para o curso de Ciência da Computação e foi apartir disso que comecei a me aprofundar realmente na área, estudando algoritmos, Lógica de progrmação e criei muitos projetos frontend para praticar. </p>
                 <p>Nas minhas horas vagas, eu gosto de jogar alguns jogos como Skyrim, ler livros como O Senhor dos Anéis, Silmarillion, Hobbit, gosto passear com meu cachorro e assistir filmes de fantasia como toda a trilogia de O Hobbit e Senhor dos Anéis. Gosto bastante de LOTR!</p>
             </div>
         </section>
 
-        <section class="sections" id="myprojects">
+        <section class="sections" id="my-projects">
             <h1>Meus Projetos</h1>
             <div class="projects">
-                <div class="imgprojects">
+                <div class="img-projects">
                 </div>
-                <div class="projectsdescription">
+                <div class="projects-description">
                     <p>Lorem ipsum d</p>
                     <span id="description1" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates. <a href="#">Clique aqui para acessar</a></span>
                 </div>
             </div>    
             <div class="projects" >
-                <div class="imgprojects"></div>
-                <div class="projectsdescription">
+                <div class="img-projects"></div>
+                <div class="projects-description">
                     <p>Lorem ipsum d</p>
                     <span id="description2" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
             </div>  
             <div class="projects">
-                <div class="imgprojects"></div>
-                <div class="projectsdescription">
+                <div class="img-projects"></div>
+                <div class="projects-description">
                     <p>Lorem ipsum d</p>
                     <span id="description3" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
