Adicionando um switch

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <main>
         <div id="div-button">
             <div id="brazil-flag"></div>
-            <label id="div-checkbox">
+            <label id="label-checkbox">
                 <input type="checkbox" id="">
-                <span id="slider"></span>
+                <span class="slider round"></span>
             </label>
             <div id="usa-flag"></div>
         </div>
