--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <main>
         <div id="div-button">
             <div id="brazil-flag"></div>
+            <div id="usa-flag"></div>
             <label id="label-checkbox">
-                <input type="checkbox" id="">
+                <input type="checkbox" id="checkbox">
                 <span class="slider round"></span>
             </label>
-            <div id="usa-flag"></div>
         </div>
 
         <section class="sections" id="section-me">
