--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <section class="sections" id="my-projects">
             <h1>Meus Projetos</h1>
             <div class="projects">
-                <div class="img-projects">
-                </div>
+                <div class="img-projects"></div>
                 <div class="projects-description">
                     <p>Lorem ipsum d</p>
                     <span id="description1" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates. <a href="#">Clique aqui para acessar</a></span>
