--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="visible">
         <div id="div-button">
             <div id="brazil-flag"></div>
             <div id="usa-flag"></div>
