--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <main class="visible">
         <div id="div-button">
-            <div id="brazil-flag"></div>
-            <div id="usa-flag"></div>
+            <div id="brazil-flag" class="flags"></div>
+            <div id="usa-flag" class="flags"></div>
             <label id="label-checkbox">
                 <input type="checkbox" id="checkbox">
                 <span class="slider round"></span>
