--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="projects">
                 <div class="img-projects"></div>
                 <div class="projects-description">
-                    <p>Lorem ipsum d</p>
+                    <p>Lorem ipsum d id</p>
                     <span id="description3" class="hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde tenetur possimus cumque accusantium! Voluptatem quam quaerat earum voluptate, assumenda tenetur beatae placeat! Natus perspiciatis, enim numquam quam possimus iusto voluptates.</span>
                 </div>
             </div>  
